--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>To add notes in the code you ad /* before and */ after the block of text.</li>
+          <li>for a single line of notes you can add 2 slashes "//"</li>
         </ul>
       </section>
     </main>
